# iot-hub-device-update-delta

./: .gitattributes  .gitignore  NuGet.config  README.md  copy_all_repo_files.ps1  get_version.ps1  get_version.sh
src/: CMakeLists.txt  CMakeSettings.json  build.ps1  build.sh  clang-format-all-code.cmd  copy_drop.sh
src/diffs/: CMakeLists.txt  all_zero_recipe.cpp  all_zero_recipe.h  apply_context.cpp  apply_context.h  archive.cpp  archive.h  archive_item.cpp  archive_item.h  archive_item_type.h  blob.h  blob_cache.cpp  blob_cache.h  bsdiff_recipe.cpp  bsdiff_recipe.h  compressed_context_type.h  concatenation_recipe.cpp  concatenation_recipe.h  copy_recipe.cpp  copy_recipe.h  copy_source_recipe.cpp  copy_source_recipe.h  delta_base_recipe.cpp  delta_base_recipe.h  diff.cpp  diff.h  diff_reader.h  diff_reader_context.cpp  diff_reader_context.h  diff_resources_context.cpp  diff_resources_context.h  diff_viewer_context.cpp  diff_viewer_context.h  diff_writer_context.cpp  diff_writer_context.h  dump_diff.cpp  dump_diff.h  gz_decompression_recipe.cpp  gz_decompression_recipe.h  hash.cpp  (+31 more)
src/diffs/api/: CMakeLists.txt  adudiffapply.cpp  adudiffapply.h  adudiffcreate.cpp  adudiffcreate.h  apply_session.cpp  apply_session.h  create_session.cpp  create_session.h
src/diffs/gtest/: CMakeLists.txt  diffs_gtest.cpp
src/error_utility/: CMakeLists.txt  adu_log.h  error_codes.h  user_exception.cpp  user_exception.h
src/hash_utility/: CMakeLists.txt  hash_utility.cpp  hash_utility.h
src/io_utility/: CMakeLists.txt  binary_file_reader.cpp  binary_file_reader.h  binary_file_readerwriter.cpp  binary_file_readerwriter.h  binary_file_writer.cpp  binary_file_writer.h  bsdiff_utility.h  bspatch_reader.cpp  bspatch_reader.h  chained_reader.cpp  chained_reader.h  child_hashed_writer.cpp  child_hashed_writer.h  child_reader.cpp  child_reader.h  file.cpp  file.h  hashed_writer.h  producer_consumer_reader_writer.h  reader.h  reader_factory.h  readerwriter.h  sequential_reader.cpp  sequential_reader.h  sequential_writer.cpp  sequential_writer.h  stored_blob_reader.cpp  stored_blob_reader.h  stored_blob_reader_factory.cpp  stored_blob_reader_factory.h  temp_file_backed_reader.cpp  temp_file_backed_reader.h  wrapped_reader_sequential_reader.h  wrapped_readerwriter.h  wrapped_writer_sequential_hashed_writer.cpp  wrapped_writer_sequential_hashed_writer.h  wrapped_writer_sequential_writer.h  writer.h  zlib_decompression_reader.cpp  (+10 more)
src/io_utility/gtest/: CMakeLists.txt  io_utility_gtest.cpp
src/managed/: Directory.Build.props  Directory.Packages.props  build.ps1  build.sh  collect_dependencies.ps1  collect_dependencies.sh  install_dependencies.sh  run_tests.ps1  run_tests.sh  stylecop.json
src/managed/DiffGen/: .editorconfig  Directory.Build.props  Directory.Packages.props  diff-generation.sln  stylecop.json
src/managed/DiffGen/ArchiveUtility/: ArchiveImpl.cs  ArchiveItem.cs  ArchiveLoader.cs  ArchiveLoaderContext.cs  ArchiveTokenization.cs  ArchiveTokenizationJsonConverter.cs  ArchiveUseCase.cs  ArchiveUtility.csproj  AsciiData.cs  BinaryData.cs  ChunkExtractor.cs  ChunkNames.cs  DiffApi.cs  DiffLogger.cs  FatalException.cs  FileFromStream.cs  Hash.cs  HashJsonConverter.cs  HexUtility.cs  IArchive.cs  ItemDefinition.cs  ItemDefinitionJsonConverter.cs  JsonHelper.cs  LoggerExtension.cs  NamePatterns.cs  Payload.cs  PayloadCatalog.cs  PayloadExtractor.cs  ProcessHelper.cs  Recipe.cs  RecipeCatalog.cs  RecipeJsonConverter.cs  RecipeParameter.cs  SubStream.cs  VerbatimPayloadArchiveBase.cs  ZstdCompressFile.cs
src/managed/DiffGen/DiffGeneration/: ADUCreate.cs  AddCopiesForDuplicateChunks.cs  AddDeltaBasedRecipes.cs  AddIdenticalPayloadBasedRecipes.cs  AddRemainderChunks.cs  AddSourceCopyRecipes.cs  BsDiffDeltaBuilder.cs  CreateDeltas.cs  CreateDiff.cs  DeltaBuilder.cs  DeltaCatalog.cs  DeltaPlan.cs  DeltaPlans.cs  Diff.cs  DiffBuilder.cs  DiffBuilderException.cs  DiffGeneration.csproj  DiffGeneration.nuspec  DiffSerializer.cs  DumpDiff.cs  ERRORS.md  Expand.cs  FinalizeInlineAssets.cs  NestedDeltaBuilder.cs  RecipeList.cs  Recompress.cs  Worker.cs  (+4 more)
src/managed/FixupSources/: FixupSources.sln  Program.cs
src/misc/ext4_samples_generation/: gen.sh
src/native/: .clang-format  CMakeLists.txt  CMakeSettings.json  GetCMakeBuildDir.ps1  GetCMakeBuildDir.sh  build.ps1  build.sh  clang-format-all-code.ps1  install_dependencies.sh  run_tests.ps1  run_tests.sh  set_version_strings.ps1  set_version_strings.sh
src/native/errors/: CMakeLists.txt  adu_log.cpp  adu_log.h  error_codes.h  user_exception.cpp  user_exception.h
src/native/hashing/: CMakeLists.txt  algorithm.cpp  algorithm.h  hash.cpp  hash.h  hasher.cpp  hasher.h  hexstring_convert.cpp  hexstring_convert.h
src/native/io/: CMakeLists.txt  all_zeros_io_device.cpp  all_zeros_io_device.h  basic_reader_factory.h  io_device.h  io_device_view.cpp  io_device_view.h  nul_device_reader.h  reader.cpp  reader.h  reader_factory.h  uint64_t_endian.cpp  uint64_t_endian.h  writer.cpp  writer.h
src/native/language_support/: include_filesystem.h  include_optional.h  overload_pattern.h
src/native/test_utility/: CMakeLists.txt  buffer_helpers.cpp  buffer_helpers.h  dump_helpers.h  gtest_includes.h  random_data_file.cpp  random_data_file.h  read_test_file.cpp  read_test_file.h  reader_validation.cpp  reader_validation.h
src/packaging/debian/: CMakeLists.txt
src/scripts/compress_files/: compress_files.py
src/scripts/recompress_swu/: README.txt
src/tools/applydiff/: CMakeLists.txt  Makefile  applydiff.c
src/tools/dumpdiff/: CMakeLists.txt  dumpdiff.cpp
src/tools/dumpextfs/: CMakeLists.txt  build  build.vcpkg  build.win32  build_dll.win32  build_instructions.txt  build_vcpkg  build_vcpkg.win32  call_configure  call_configure_linux  dump_json.cpp  dump_json.h  e2fsprogs.patch  file_details.cpp  file_details.h  load_ext4.cpp  load_ext4.h  main.cpp  test
src/tools/zstd_compress_file/: CMakeLists.txt  compress_utility.cpp  compress_utility.h  get_file_hash.cpp  get_file_hash.h  zstd_compress_file.cpp
src/tools/zstd_compression_tool/: README.txt
(+546 files in other folders)
